# RoboKnight

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
dev_log/: dev_log.md
src/app/: CMakeLists.txt  app.cpp
src/input_simulation/: CMakeLists.txt  input_simulation.cpp  player_action.cpp
src/input_simulation/include/: input_simulation.h  player_action.h
src/logger/: CMakeLists.txt  logger.cpp
src/logger/include/: logger.h
src/screen_capture/: CMakeLists.txt
